Fixed forecast table spacing

--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ footer, #source-code {
 }
 
 .weather-forecast {
-    padding-bottom: 15px;
+    padding-bottom: 30px;
     text-align: center;
 }
 
@@ -88,6 +88,10 @@ footer, #source-code {
     color: rgba(39, 33, 66, .4);
     font-size: 12px;
     margin-top: 5px;
+}
+
+.forecast-elements {
+    margin: 11px;
 }
 
 .maximum-forecast-temperature {
